[gd_scene load_steps=21 format=3 uid="uid://doa7j7q1j4p4e"]

[ext_resource type="Script" uid="uid://gqrqtmbho5lj" path="res://bidi.gd" id="2"]
[ext_resource type="FontFile" uid="uid://dcyy0x2u3jocr" path="res://fonts/NotoSansThaiUI_Regular.ttf" id="2_plk2w"]
[ext_resource type="Script" uid="uid://c1yur7v2rmbrg" path="res://custom_st_parser.gd" id="3"]
[ext_resource type="FontFile" uid="uid://bk3udiiuy60g4" path="res://fonts/NotoNaskhArabicUI_Regular.ttf" id="3_cf43x"]
[ext_resource type="FontVariation" uid="uid://bymgwaapysw4i" path="res://lib_font.tres" id="4"]
[ext_resource type="FontFile" uid="uid://cwer1pi5ka4io" path="res://fonts/NotoSansHebrew_Regular.ttf" id="4_03wxc"]
[ext_resource type="FontFile" uid="uid://bic5b75wmaxwj" path="res://fonts/LinLibertine_R.otf" id="5_dd4o7"]
[ext_resource type="FontFile" uid="uid://cctsp10uhaei8" path="res://fonts/Recursive_VF_subset-GF_latin_basic.woff2" id="8_8y1fh"]

[sub_resource type="FontVariation" id="FontVariation_pn5rb"]
base_font = ExtResource("5_dd4o7")
opentype_features = {
1818847073: 0
}

[sub_resource type="FontVariation" id="FontVariation_dej54"]
base_font = ExtResource("5_dd4o7")
opentype_features = {
1936548720: 1
}

[sub_resource type="FontVariation" id="FontVariation_cfykr"]
base_font = ExtResource("5_dd4o7")
opentype_features = {
2053468783: 1
}

[sub_resource type="FontVariation" id="FontVariation_tbiyt"]
base_font = ExtResource("5_dd4o7")
opentype_features = {
1718772067: 1
}

[sub_resource type="FontVariation" id="FontVariation_7cco7"]
base_font = ExtResource("5_dd4o7")
opentype_features = {
1869509997: 1,
1935764596: 1
}

[sub_resource type="FontVariation" id="FontVariation_vb6m6"]
base_font = ExtResource("8_8y1fh")
variation_opentype = {
1128354636: null,
1129468758: null,
1297043023: null,
2003265652: 400
}

[sub_resource type="SystemFont" id="SystemFont_2w5b3"]
font_names = PackedStringArray("sans-serif")

[sub_resource type="SystemFont" id="SystemFont_h8xpn"]
font_names = PackedStringArray("serif")

[sub_resource type="SystemFont" id="SystemFont_4rcq4"]
font_names = PackedStringArray("monospace")

[sub_resource type="SystemFont" id="SystemFont_gnv0g"]
font_names = PackedStringArray("cursive")

[sub_resource type="SystemFont" id="SystemFont_f282f"]
font_names = PackedStringArray("fantasy")

[sub_resource type="SystemFont" id="SystemFont_oua6b"]
font_names = PackedStringArray("")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14

[node name="Line breaking and justification" type="Panel" parent="TabContainer"]
layout_mode = 2

[node name="LabelBrkInfo" type="Label" parent="TabContainer/Line breaking and justification"]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 830.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0.419608, 0.831373, 0.505882, 1)
theme_override_font_sizes/font_size = 14
text = "1. Line breaking and space justification."

[node name="LabelTHNoBreak" type="Label" parent="TabContainer/Line breaking and justification"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.000891266
anchor_bottom = 0.000891266
offset_left = 30.0
offset_top = 69.4474
offset_right = 1046.0
offset_bottom = 92.4474
theme_override_fonts/font = ExtResource("2_plk2w")
theme_override_font_sizes/font_size = 14
text = "ภาษาไทย หรือ ภาษาไทยกลาง เป็นภาษาราชการและภาษาประจำชาติของประเทศไทย ภาษาไทยเป็นภาษาในกลุ่มภาษาไทซึ่งเป็นกลุ่มย่อยของตระกูลภาษาขร้า-ไท"
autowrap_mode = 3

[node name="LabelTHBreak" type="Label" parent="TabContainer/Line breaking and justification"]
layout_mode = 0
offset_left = 30.0
offset_top = 100.0
offset_right = 331.0
offset_bottom = 200.0
theme_override_fonts/font = ExtResource("2_plk2w")
theme_override_font_sizes/font_size = 14
text = "ภาษาไทย หรือ ภาษาไทยกลาง เป็นภาษาราชการและภาษาประจำชาติของประเทศไทย ภาษาไทยเป็นภาษาในกลุ่มภาษาไทซึ่งเป็นกลุ่มย่อยของตระกูลภาษาขร้า-ไท"
horizontal_alignment = 3
autowrap_mode = 3

[node name="LabelJstInfo" type="Label" parent="TabContainer/Line breaking and justification"]
layout_mode = 0
anchor_top = 0.000891266
anchor_bottom = 0.000891266
offset_left = 30.0
offset_top = 213.5
offset_right = 830.0
offset_bottom = 236.5
theme_override_colors/font_color = Color(0.420413, 0.832031, 0.504023, 1)
theme_override_font_sizes/font_size = 14
text = "2. Kashida justification."

[node name="LabelARNoJst2" type="Label" parent="TabContainer/Line breaking and justification"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.000891266
anchor_bottom = 0.000891266
offset_left = 30.0
offset_top = 248.447
offset_right = 258.0
offset_bottom = 271.447
theme_override_fonts/font = ExtResource("3_cf43x")
theme_override_font_sizes/font_size = 14
text = "آنچ اندر وهم ناید آن شوم"
horizontal_alignment = 3

[node name="LabelARJst" type="Label" parent="TabContainer/Line breaking and justification"]
layout_mode = 0
anchor_top = 0.000891266
anchor_bottom = 0.000891266
offset_left = 30.0
offset_top = 273.5
offset_right = 255.0
offset_bottom = 296.5
theme_override_fonts/font = ExtResource("3_cf43x")
theme_override_font_sizes/font_size = 14
text = "آنچ اندر وهم ناید آن شوم"

[node name="Text direction" type="Panel" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="LabelDirInfo" type="Label" parent="TabContainer/Text direction"]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 830.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.419608, 0.831373, 0.505882, 1)
theme_override_font_sizes/font_size = 14
text = "1. Base text direction. (Left-to-right, Auto, Right-to-left)"

[node name="LineEditL1" type="LineEdit" parent="TabContainer/Text direction"]
layout_mode = 0
offset_left = 30.0
offset_top = 60.0
offset_right = 260.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("3_cf43x")
theme_override_font_sizes/font_size = 14
text = "Najaf (ٱلنَّجَف‎), also known as Baniqia."
editable = false
context_menu_enabled = false
text_direction = 1

[node name="LineEditA1" type="LineEdit" parent="TabContainer/Text direction"]
layout_mode = 0
offset_left = 270.0
offset_top = 60.0
offset_right = 500.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("3_cf43x")
theme_override_font_sizes/font_size = 14
text = "Najaf (ٱلنَّجَف‎), also known as Baniqia."
editable = false
context_menu_enabled = false

[node name="LineEditR1" type="LineEdit" parent="TabContainer/Text direction"]
modulate = Color(0.847059, 0.54902, 0.54902, 1)
layout_mode = 0
offset_left = 510.0
offset_top = 60.0
offset_right = 740.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("3_cf43x")
theme_override_font_sizes/font_size = 14
text = "Najaf (ٱلنَّجَف‎), also known as Baniqia."
editable = false
context_menu_enabled = false
text_direction = 2

[node name="LineEditL2" type="LineEdit" parent="TabContainer/Text direction"]
modulate = Color(0.847059, 0.54902, 0.54902, 1)
layout_mode = 0
offset_left = 30.0
offset_top = 99.5
offset_right = 260.0
offset_bottom = 129.5
theme_override_fonts/font = ExtResource("3_cf43x")
theme_override_font_sizes/font_size = 14
text = "الإنجليزية أو الإنغليزية (بالإنجليزية: English)‏،"
editable = false
context_menu_enabled = false
text_direction = 1

[node name="LineEditA2" type="LineEdit" parent="TabContainer/Text direction"]
layout_mode = 0
offset_left = 270.0
offset_top = 100.0
offset_right = 500.0
offset_bottom = 130.0
theme_override_fonts/font = ExtResource("3_cf43x")
theme_override_font_sizes/font_size = 14
text = "الإنجليزية أو الإنغليزية (بالإنجليزية: English)‏،"
editable = false
context_menu_enabled = false

[node name="LineEditR2" type="LineEdit" parent="TabContainer/Text direction"]
layout_mode = 0
offset_left = 510.0
offset_top = 100.0
offset_right = 740.0
offset_bottom = 130.0
theme_override_fonts/font = ExtResource("3_cf43x")
theme_override_font_sizes/font_size = 14
text = "الإنجليزية أو الإنغليزية (بالإنجليزية: English)‏،"
editable = false
context_menu_enabled = false
text_direction = 2

[node name="LabelSTInfo" type="Label" parent="TabContainer/Text direction"]
layout_mode = 0
offset_left = 30.0
offset_top = 150.0
offset_right = 830.0
offset_bottom = 170.0
theme_override_colors/font_color = Color(0.419608, 0.831373, 0.505882, 1)
theme_override_font_sizes/font_size = 14
text = "2. BiDi override for structured text (select item in the list to test)."

[node name="Tree" type="Tree" parent="TabContainer/Text direction"]
layout_mode = 0
offset_left = 30.0
offset_top = 180.0
offset_right = 430.0
offset_bottom = 340.0
theme_override_fonts/font = ExtResource("4_03wxc")
theme_override_font_sizes/font_size = 14

[node name="LabelNoST" type="Label" parent="TabContainer/Text direction"]
layout_mode = 0
offset_left = 460.0
offset_top = 195.0
offset_right = 560.0
offset_bottom = 215.0
theme_override_font_sizes/font_size = 14
text = "Default BiDi:"

[node name="LabelST" type="Label" parent="TabContainer/Text direction"]
layout_mode = 0
offset_left = 460.0
offset_top = 238.5
offset_right = 560.0
offset_bottom = 258.5
theme_override_font_sizes/font_size = 14
text = "\"File\" override:"

[node name="LineEditNoST" type="LineEdit" parent="TabContainer/Text direction"]
layout_mode = 0
offset_left = 582.0
offset_top = 188.0
offset_right = 882.0
offset_bottom = 218.0
theme_override_fonts/font = ExtResource("4_03wxc")
theme_override_font_sizes/font_size = 14
editable = false
context_menu_enabled = false

[node name="LineEditST" type="LineEdit" parent="TabContainer/Text direction"]
layout_mode = 0
offset_left = 582.0
offset_top = 236.0
offset_right = 882.0
offset_bottom = 266.0
theme_override_fonts/font = ExtResource("4_03wxc")
theme_override_font_sizes/font_size = 14
editable = false
context_menu_enabled = false
structured_text_bidi_override = 2

[node name="LabelSTCustomInfo" type="Label" parent="TabContainer/Text direction"]
layout_mode = 0
offset_left = 30.0
offset_top = 358.0
offset_right = 830.0
offset_bottom = 381.0
theme_override_colors/font_color = Color(0.419608, 0.831373, 0.505882, 1)
theme_override_font_sizes/font_size = 14
text = "3. Custom BiDi override script (split by \":\" and reverse the order, see \"custom_st_parser.gd\"):"

[node name="LineEditCustomSTSource" type="LineEdit" parent="TabContainer/Text direction"]
layout_mode = 0
offset_left = 30.0
offset_top = 396.0
offset_right = 330.0
offset_bottom = 426.0
theme_override_font_sizes/font_size = 14
text = "first:second:third"
context_menu_enabled = false

[node name="LineEditCustomSTDst" type="LineEdit" parent="TabContainer/Text direction"]
layout_mode = 0
offset_left = 342.0
offset_top = 396.0
offset_right = 642.0
offset_bottom = 426.0
theme_override_font_sizes/font_size = 14
text = "first:second:third"
context_menu_enabled = false
structured_text_bidi_override = 6
script = ExtResource("3")

[node name="Font features" type="Panel" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="LabelDisplay1" type="Label" parent="TabContainer/Font features"]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 330.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 24
text = "Que fin after 019 1/2 1/3 &, h, β, θ,"

[node name="LabelInfo1" type="Label" parent="TabContainer/Font features"]
layout_mode = 0
offset_left = 446.0
offset_top = 30.0
offset_right = 746.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 18
text = "default, no features"

[node name="LabelDisplay2" type="Label" parent="TabContainer/Font features"]
layout_mode = 0
offset_left = 30.0
offset_top = 69.5
offset_right = 330.0
offset_bottom = 109.5
theme_override_fonts/font = SubResource("FontVariation_pn5rb")
theme_override_font_sizes/font_size = 24
text = "Que fin after 019 1/2 1/3 &, h, β, θ,"

[node name="LabelInfo2" type="Label" parent="TabContainer/Font features"]
layout_mode = 0
offset_left = 446.0
offset_top = 70.0
offset_right = 746.0
offset_bottom = 110.0
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 18
text = "standard_ligatures=0 (disabled)"

[node name="LabelDisplay3" type="Label" parent="TabContainer/Font features"]
layout_mode = 0
offset_left = 30.0
offset_top = 109.5
offset_right = 330.0
offset_bottom = 149.5
theme_override_fonts/font = SubResource("FontVariation_dej54")
theme_override_font_sizes/font_size = 24
text = "Que fin after 019 1/2 1/3 &, h, β, θ,"

[node name="LabelInfo3" type="Label" parent="TabContainer/Font features"]
layout_mode = 0
offset_left = 446.0
offset_top = 110.0
offset_right = 746.0
offset_bottom = 150.0
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 18
text = "small_capitals=1"

[node name="LabelDisplay4" type="Label" parent="TabContainer/Font features"]
layout_mode = 0
offset_left = 31.0
offset_top = 150.5
offset_right = 331.0
offset_bottom = 190.5
theme_override_fonts/font = SubResource("FontVariation_cfykr")
theme_override_font_sizes/font_size = 24
text = "Que fin after 019 1/2 1/3 &, h, β, θ,"

[node name="LabelInfo4" type="Label" parent="TabContainer/Font features"]
layout_mode = 0
offset_left = 446.0
offset_top = 150.0
offset_right = 746.0
offset_bottom = 190.0
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 18
text = "slashed_zero=1"

[node name="LabelDisplay5" type="Label" parent="TabContainer/Font features"]
layout_mode = 0
offset_left = 31.0
offset_top = 190.5
offset_right = 331.0
offset_bottom = 230.5
theme_override_fonts/font = SubResource("FontVariation_tbiyt")
theme_override_font_sizes/font_size = 24
text = "Que fin after 019 1/2 1/3 &, h, β, θ,"

[node name="LabelInfo5" type="Label" parent="TabContainer/Font features"]
layout_mode = 0
offset_left = 446.0
offset_top = 190.0
offset_right = 918.609
offset_bottom = 230.0
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 18
text = "fractions"

[node name="LabelDisplay6" type="Label" parent="TabContainer/Font features"]
layout_mode = 0
offset_left = 31.0
offset_top = 230.5
offset_right = 331.0
offset_bottom = 270.5
theme_override_fonts/font = SubResource("FontVariation_7cco7")
theme_override_font_sizes/font_size = 24
text = "Que fin after 019 1/2 1/3 &, h, β, θ,"

[node name="LabelInfo6" type="Label" parent="TabContainer/Font features"]
layout_mode = 0
offset_left = 446.0
offset_top = 230.0
offset_right = 918.609
offset_bottom = 270.0
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 18
text = "oldstyle_figures=1, stylistic_alternates=1"

[node name="RichTextLabel2" type="RichTextLabel" parent="TabContainer/Font features"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.000334372
anchor_right = -0.000334372
offset_left = 33.3852
offset_top = 327.0
offset_right = 992.385
offset_bottom = 488.0
theme_override_fonts/normal_font = ExtResource("4")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "RichTextLabel BBCode:
[font_size=24]
Que fin 1/3 0
[opentype_features=liga=0]Que fin 1/3 0[/opentype_features] [color=#fffa](liga=0 - disables ligatures)[/color]
[opentype_features=frac=1,zero]Que fin 1/3 0[/opentype_features] [color=#fffa](frac=1,zero - fractions and slashed zero)[/color][/font_size]"

[node name="Variable fonts" type="Panel" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="LabelVarInfo" type="Label" parent="TabContainer/Variable fonts"]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 830.0
offset_bottom = 53.0
theme_override_colors/font_color = Color(0.419608, 0.831373, 0.505882, 1)
theme_override_font_sizes/font_size = 14
text = "Variable font example."

[node name="Variables" type="VBoxContainer" parent="TabContainer/Variable fonts"]
layout_mode = 0
offset_left = 40.0
offset_top = 88.0
offset_right = 351.0
offset_bottom = 174.0

[node name="Size" type="HBoxContainer" parent="TabContainer/Variable fonts/Variables"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="TabContainer/Variable fonts/Variables/Size"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Size"

[node name="HSlider" type="HSlider" parent="TabContainer/Variable fonts/Variables/Size"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 8.0
max_value = 128.0
value = 64.0

[node name="Value" type="Label" parent="TabContainer/Variable fonts/Variables/Size"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "64"

[node name="Weight" type="HBoxContainer" parent="TabContainer/Variable fonts/Variables"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="TabContainer/Variable fonts/Variables/Weight"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Weight"

[node name="HSlider" type="HSlider" parent="TabContainer/Variable fonts/Variables/Weight"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 300.0
max_value = 1000.0
step = 50.0
value = 400.0

[node name="Value" type="Label" parent="TabContainer/Variable fonts/Variables/Weight"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "400"

[node name="Slant" type="HBoxContainer" parent="TabContainer/Variable fonts/Variables"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="TabContainer/Variable fonts/Variables/Slant"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Slant"

[node name="HSlider" type="HSlider" parent="TabContainer/Variable fonts/Variables/Slant"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -15.0
max_value = 0.0

[node name="Value" type="Label" parent="TabContainer/Variable fonts/Variables/Slant"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "0"

[node name="Cursive" type="CheckButton" parent="TabContainer/Variable fonts/Variables"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Cursive"

[node name="Casual" type="CheckButton" parent="TabContainer/Variable fonts/Variables"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Casual"

[node name="Monospace" type="CheckButton" parent="TabContainer/Variable fonts/Variables"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Monospace"

[node name="VariableFontPreview" type="LineEdit" parent="TabContainer/Variable fonts"]
layout_mode = 0
offset_left = 36.0
offset_top = 347.0
offset_right = 1115.0
offset_bottom = 525.0
theme_override_fonts/font = SubResource("FontVariation_vb6m6")
theme_override_font_sizes/font_size = 64
text = "Example text – 1234567890"

[node name="LinkButton" type="LinkButton" parent="TabContainer/Variable fonts/VariableFontPreview"]
layout_mode = 0
offset_left = 959.0
offset_top = 193.0
offset_right = 1077.0
offset_bottom = 238.0
text = "Font: Recursive"
uri = "https://www.recursive.design/"

[node name="System fonts" type="Panel" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="LabelVarInfo" type="Label" parent="TabContainer/System fonts"]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 830.0
offset_bottom = 53.0
theme_override_colors/font_color = Color(0.419608, 0.831373, 0.505882, 1)
theme_override_font_sizes/font_size = 14
text = "Loading and displaying system fonts."

[node name="ValueSetter" type="LineEdit" parent="TabContainer/System fonts"]
layout_mode = 0
offset_left = 36.0
offset_top = 77.0
offset_right = 695.0
offset_bottom = 108.0
text = "Example text – 1234567890"
placeholder_text = "Enter text here"

[node name="Italic" type="CheckButton" parent="TabContainer/System fonts"]
layout_mode = 0
offset_left = 406.0
offset_top = 116.0
offset_right = 492.0
offset_bottom = 147.0
text = "Italic"

[node name="Weight" type="HBoxContainer" parent="TabContainer/System fonts"]
layout_mode = 0
offset_left = 40.0
offset_top = 120.0
offset_right = 383.0
offset_bottom = 146.0
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="TabContainer/System fonts/Weight"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Weight"

[node name="HSlider" type="HSlider" parent="TabContainer/System fonts/Weight"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 100.0
max_value = 900.0
step = 100.0
value = 400.0

[node name="Value" type="Label" parent="TabContainer/System fonts/Weight"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "400"

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/System fonts"]
layout_mode = 0
offset_left = 37.0
offset_top = 176.0
offset_right = 1126.0
offset_bottom = 489.0

[node name="SansSerif" type="HBoxContainer" parent="TabContainer/System fonts/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="FontName" type="Label" parent="TabContainer/System fonts/VBoxContainer/SansSerif"]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_2w5b3")
theme_override_font_sizes/font_size = 32
text = "sans-serif"

[node name="Value" type="Label" parent="TabContainer/System fonts/VBoxContainer/SansSerif"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("SystemFont_2w5b3")
theme_override_font_sizes/font_size = 32
text = "Example text – 1234567890"
text_overrun_behavior = 3

[node name="Serif" type="HBoxContainer" parent="TabContainer/System fonts/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="FontName" type="Label" parent="TabContainer/System fonts/VBoxContainer/Serif"]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_h8xpn")
theme_override_font_sizes/font_size = 32
text = "serif"

[node name="Value" type="Label" parent="TabContainer/System fonts/VBoxContainer/Serif"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("SystemFont_h8xpn")
theme_override_font_sizes/font_size = 32
text = "Example text – 1234567890"
text_overrun_behavior = 3

[node name="Monospace" type="HBoxContainer" parent="TabContainer/System fonts/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="FontName" type="Label" parent="TabContainer/System fonts/VBoxContainer/Monospace"]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_4rcq4")
theme_override_font_sizes/font_size = 32
text = "monospace"

[node name="Value" type="Label" parent="TabContainer/System fonts/VBoxContainer/Monospace"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("SystemFont_4rcq4")
theme_override_font_sizes/font_size = 32
text = "Example text – 1234567890"
text_overrun_behavior = 3

[node name="Cursive" type="HBoxContainer" parent="TabContainer/System fonts/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="FontName" type="Label" parent="TabContainer/System fonts/VBoxContainer/Cursive"]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_gnv0g")
theme_override_font_sizes/font_size = 32
text = "cursive"

[node name="Value" type="Label" parent="TabContainer/System fonts/VBoxContainer/Cursive"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("SystemFont_gnv0g")
theme_override_font_sizes/font_size = 32
text = "Example text – 1234567890"
text_overrun_behavior = 3

[node name="Fantasy" type="HBoxContainer" parent="TabContainer/System fonts/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="FontName" type="Label" parent="TabContainer/System fonts/VBoxContainer/Fantasy"]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_f282f")
theme_override_font_sizes/font_size = 32
text = "fantasy"

[node name="Value" type="Label" parent="TabContainer/System fonts/VBoxContainer/Fantasy"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("SystemFont_f282f")
theme_override_font_sizes/font_size = 32
text = "Example text – 1234567890"
text_overrun_behavior = 3

[node name="Custom" type="HBoxContainer" parent="TabContainer/System fonts/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="FontName" type="LineEdit" parent="TabContainer/System fonts/VBoxContainer/Custom"]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_oua6b")
theme_override_font_sizes/font_size = 32
placeholder_text = "Custom Font Name"

[node name="Value" type="Label" parent="TabContainer/System fonts/VBoxContainer/Custom"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("SystemFont_oua6b")
theme_override_font_sizes/font_size = 32
text = "Example text – 1234567890"
text_overrun_behavior = 3

[connection signal="item_selected" from="TabContainer/Text direction/Tree" to="." method="_on_Tree_item_selected"]
[connection signal="text_changed" from="TabContainer/Text direction/LineEditCustomSTSource" to="." method="_on_LineEditCustomSTSource_text_changed"]
[connection signal="text_changed" from="TabContainer/Text direction/LineEditCustomSTDst" to="." method="_on_LineEditCustomSTDst_text_changed"]
[connection signal="tree_entered" from="TabContainer/Text direction/LineEditCustomSTDst" to="." method="_on_LineEditCustomSTDst_tree_entered"]
[connection signal="value_changed" from="TabContainer/Variable fonts/Variables/Size/HSlider" to="." method="_on_variable_size_value_changed"]
[connection signal="value_changed" from="TabContainer/Variable fonts/Variables/Weight/HSlider" to="." method="_on_variable_weight_value_changed"]
[connection signal="value_changed" from="TabContainer/Variable fonts/Variables/Slant/HSlider" to="." method="_on_variable_slant_value_changed"]
[connection signal="toggled" from="TabContainer/Variable fonts/Variables/Cursive" to="." method="_on_variable_cursive_toggled"]
[connection signal="toggled" from="TabContainer/Variable fonts/Variables/Casual" to="." method="_on_variable_casual_toggled"]
[connection signal="toggled" from="TabContainer/Variable fonts/Variables/Monospace" to="." method="_on_variable_monospace_toggled"]
[connection signal="text_changed" from="TabContainer/System fonts/ValueSetter" to="." method="_on_system_font_value_text_changed"]
[connection signal="toggled" from="TabContainer/System fonts/Italic" to="." method="_on_system_font_italic_toggled"]
[connection signal="value_changed" from="TabContainer/System fonts/Weight/HSlider" to="." method="_on_system_font_weight_value_changed"]
[connection signal="text_changed" from="TabContainer/System fonts/VBoxContainer/Custom/FontName" to="." method="_on_system_font_name_text_changed"]
